fix code background overflow

--- a/frontend/static/code.css
+++ b/frontend/static/code.css
@@ -1,5 +1,5 @@
 .codehilite .hll { background-color: #ffffcc }
-.codehilite  { background: #f8f8f8; }
+.codehilite pre { background: #f8f8f8; background-clip: content-box }
 .codehilite .c { color: #408080; font-style: italic } /* Comment */
 /* .codehilite .err { border: 1px solid #FF0000 } /* Error */
 .codehilite .k { color: #008000; font-weight: bold } /* Keyword */
